--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "typeScript": "npm:typescript@^5.3.3"
   }
