--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "cloudmailin": "0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flag-kit": "^1.1.1",
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "redux": "^4.2.0",
     "serve": "^14.2.0",
     "typescript": "^4.7.4",
